# rover-vacuum-cleaner

./: README.md
3D/: Chassi.SLDPRT  GY_91.SLDPRT  N20_Mount.step
codes/arduino_ide/encoder2odom/: encoder2odom.ino
codes/arduino_ide/imu9dof_madgwick/: MPU9250.cpp  MPU9250.h  imu9dof_madgwick.ino
codes/arduino_ide/micro_ros_publisher/: micro_ros_publisher.ino
codes/encoder2odom/: CMakeLists.txt
codes/encoder2odom/src/: main.c
codes/imu9dof_madgwick/include/: madgwick_ahrs.h
codes/imu9dof_madgwick/src/: main.c  mpu9250.c
codes/micro_ros/: CMakeLists.txt  platformio.ini
codes/micro_ros/src/: main.c
codes/platformio_espidf/imu9dof_madgwick/: CMakeLists.txt
embedded/computer/: README.md
embedded/microcontroller/: MPU9250.cpp  MPU9250.h  microcontroller.ino
rover_vacuum_cleaner/: package.xml  setup.cfg  setup.py
rover_vacuum_cleaner/config/: ekf.yaml  ros_gz_bridge.yaml
rover_vacuum_cleaner/launch/: ekf_node.launch.py  rover_world.launch.py
rover_vacuum_cleaner/models/rover/: model.config  model.sdf
rover_vacuum_cleaner/models/rover/meshes/: Wheel_Link_BL.STL
rover_vacuum_cleaner/worlds/: indoor_house_world.sdf
simulation/config/: joint_names_rover.yaml
simulation/meshes/: Mount_Link_BL.STL  Mount_Link_FR.STL  Wheel_Link_BR.STL
simulation/sdf/: rover.sdf
simulation/urdf/: rover.csv  rover.urdf
solidworks/: LM2596.SLDPRT  N20_Mount.SLDPRT  TB6612FNG.SLDPRT  VL53L1X.step
urdf/meshes/: LD14P_Link.STL  Mount_Link_BR.STL  Wheel_Link_FL.STL  Wheel_Link_FR.STL  base_link.STL
urdf/urdf/: rover.urdf
(+32 files in other folders)
