<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_vacuum_cleaner</name>
  <version>0.0.0</version>
  <description>Autonomous robotic rover designed for navigation and task execution, inspired by smart vacuum cleaners.</description>
  <maintainer email="lucashudson.eng@gmail.com">hudson</maintainer>
  <license>GPL-3.0-or-later</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
